--- a/package.json
+++ b/package.json
@@ -1,46 +1,35 @@
 {
-  "name": "gatsby-starter-styled-components",
+  "name": "oliwia-czuk",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby and styled-components",
-  "version": "0.1.0",
-  "author": "Blake Noll <nollblake@gmail.com>",
+  "description": "Oliwia Czuk's portfolio",
+  "version": "1.0.0",
+  "author": "Igor Motyka <igormotyka6@gmail.com>",
   "dependencies": {
-    "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "^2.19.12",
-    "gatsby-image": "^2.2.30",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^3.0.18",
-    "gatsby-plugin-react-helmet": "^3.1.2",
-    "gatsby-plugin-sharp": "^2.2.8",
-    "gatsby-plugin-styled-components": "^3.1.11",
-    "gatsby-source-filesystem": "^2.1.9",
-    "gatsby-transformer-sharp": "^2.2.23",
+    "babel-plugin-styled-components": "^1.10.7",
+    "gatsby": "^2.19.32",
+    "gatsby-image": "^2.2.43",
+    "gatsby-plugin-manifest": "^2.2.44",
+    "gatsby-plugin-offline": "^3.0.37",
+    "gatsby-plugin-react-helmet": "^3.1.23",
+    "gatsby-plugin-sharp": "^2.4.7",
+    "gatsby-plugin-styled-components": "^3.1.20",
+    "gatsby-source-filesystem": "^2.1.50",
+    "gatsby-transformer-sharp": "^2.3.17",
     "prop-types": "^15.7.2",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
-    "styled-components": "^4.4.0"
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "^1.19.1"
   },
-  "keywords": [
-    "gatsby"
-  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/blakenoll/gatsby-starter-styled-components"
-  },
-  "bugs": {
-    "url": "https://github.com/blakenoll/gatsby-starter-styled-components/issues"
+    "serve": "gatsby serve"
   }
 }
