--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "gatsby-plugin-styled-components": "^3.1.20",
     "gatsby-source-filesystem": "^2.1.50",
     "gatsby-transformer-sharp": "^2.3.17",
+    "gsap": "^3.2.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
+    "scrollmagic": "^2.0.7",
+    "scrollmagic-plugin-gsap": "^1.0.4",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
