--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "version": "1.0.0",
   "author": "Igor Motyka <igormotyka6@gmail.com>",
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-plugin-styled-components": "^1.10.7",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.19.43",
     "gatsby-image": "^2.2.43",
     "gatsby-plugin-manifest": "^2.2.47",
