--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^2.19.43",
     "gatsby-image": "^2.2.43",
     "gatsby-plugin-manifest": "^2.2.47",
+    "gatsby-plugin-netlify-cms": "^4.2.0",
     "gatsby-plugin-offline": "^3.0.40",
     "gatsby-plugin-react-helmet": "^3.1.23",
     "gatsby-plugin-react-svg": "^3.0.0",
@@ -19,8 +20,10 @@
     "gatsby-plugin-styled-components": "^3.1.20",
     "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-source-filesystem": "^2.1.55",
+    "gatsby-transformer-remark": "^2.7.0",
     "gatsby-transformer-sharp": "^2.3.18",
     "gsap": "^3.2.4",
+    "netlify-cms-app": "^2.11.32",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
