--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "gatsby-plugin-manifest": "^2.2.47",
     "gatsby-plugin-netlify-cms": "^4.2.0",
     "gatsby-plugin-offline": "^3.0.40",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.1.23",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sharp": "^2.4.12",
     "gatsby-plugin-styled-components": "^3.1.20",
     "gatsby-plugin-transition-link": "^1.18.0",
+    "gatsby-remark-images": "^3.2.0",
+    "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "^2.1.55",
     "gatsby-transformer-remark": "^2.7.0",
     "gatsby-transformer-sharp": "^2.3.18",
