--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,6 +11,12 @@ collections:
     folder: project
     create: true
     fields:
+      - {
+          label: "Template Key",
+          name: "templateKey",
+          widget: "hidden",
+          default: "project",
+        }
       - { name: location, label: Location, widget: string }
       - {
           name: status,
